// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wasm > decode & create proof works 1`] = `
{
  "0x06de3d8a54d27e44a9d5ce189618f22db4b49d95320d9021994c850f25b8e385": "0x00005000005000000a00000000c8000000c800000a0000000a000000c8000000640000000000500000c800000700e8764817020040010a0000000000000000c0220fca950300000000000000000000c0220fca9503000000000000000000e8030000009001000a00000000000000009001008070000000000000000000000a000000050000000500000001000000010500000001c800000006000000580200005802000002000000280000000000000002000000010000000700c817a8040200400101020000000f000000",
  "0x1cb6f36e027abb2091cfb5110ab5087f06155b3cd9a8c9e5e9a23fd5dc13a5ed": "0x5d49a91000000000",
  "0x1cb6f36e027abb2091cfb5110ab5087f38316cbf8fa0da822a20ac1c55bf1be3": "0xa262000000000000",
  "0x1cb6f36e027abb2091cfb5110ab5087f7a414cb008e0e61e46722aa60abdd672": "0x2527aaef690b1334e4ec1bd567ea892286dc1265510ad57d74dd8628d4c47ad4",
  "0x1cb6f36e027abb2091cfb5110ab5087f7ce678799d3eff024253b90e84927cc6": "0xcc322cfedfa300d9bec6649d65f16273941d0e2f90a4c0d7173dd7c95bb02597",
  "0x1cb6f36e027abb2091cfb5110ab5087fd077dfdb8adb10f78f10a5df8742c545": "0x01083c38641effe2a1c267fb16654d73afd072e5bbbb58a3cee00b6f07858d7868",
  "0x63f78c98723ddc9073523ef3beefda0c4d7fefc408aac59dbfe80a72ac8e3ce5b6ff6f7d467b87a9e8030000": "0xf217a51bf18a93d44906f8a3dbd8f60acb609b03c9ade7e38532e3f5f18f70e8",
  "0x6a0da05ca59913bc38a8630590f2627c1d3719f5b0b12c7105c073c507445948b6ff6f7d467b87a9e8030000": "0x08d007000049080000",
  "0x6a0da05ca59913bc38a8630590f2627cf12b746dcf32e843354583c9702cc020b6ff6f7d467b87a9e8030000": "0x08d007000049080000",
  "0xcd710b30bd2eab0352ddcc26417aa1949e94c040f5e73d9b7addd6cb603d15d3b6ff6f7d467b87a9e8030000": undefined,
}
`;

exports[`wasm > decode & create proof works 2`] = `
{
  "chainAvailabilityPeriod": 5,
  "codeRetentionPeriod": 0,
  "disputeConclusionByTimeOutPeriod": 2,
  "disputeMaxSpamSlots": 600,
  "disputePeriod": 6,
  "disputePostConclusionAcceptancePeriod": 600,
  "groupRotationFrequency": 5,
  "hrmpChannelMaxCapacity": 102400,
  "hrmpChannelMaxMessageSize": 28800,
  "hrmpChannelMaxTotalSize": 10,
  "hrmpMaxMessageNumPerCandidate": 10,
  "hrmpMaxParachainInboundChannels": 0,
  "hrmpMaxParachainOutboundChannels": 10,
  "hrmpMaxParathreadInboundChannels": 102400,
  "hrmpMaxParathreadOutboundChannels": 0,
  "hrmpOpenRequestTtl": 253935616,
  "hrmpRecipientDeposit": "0x000003e80000000000000000000395ca",
  "hrmpSenderDeposit": "0x0f22c0000000000000000000000395ca",
  "maxCodeSize": 5242880,
  "maxDownwardMessageSize": 51200,
  "maxHeadDataSize": 20480,
  "maxPovSize": 5242880,
  "maxUpwardMessageNumPerCandidate": 10,
  "maxUpwardMessageSize": 51200,
  "maxUpwardQueueCount": 10,
  "maxUpwardQueueSize": 51200,
  "maxValidators": 200,
  "maxValidatorsPerCore": null,
  "nDelayTranches": 0,
  "neededApprovals": 1,
  "noShowSlots": 40,
  "parathreadCores": 0,
  "parathreadRetries": 10,
  "preferredDispatchableUpwardMessagesStepWeight": {
    "proofSize": 5242880,
    "refTime": 100000000000,
  },
  "relayVrfModuloSamples": 398983175,
  "schedulingLookahead": 1281,
  "threadAvailabilityPeriod": 1,
  "validationUpgradeDelay": 100,
  "validationUpgradeFrequency": 200,
  "zerothDelayTrancheWidth": 2,
}
`;

exports[`wasm > decode & create proof works 3`] = `"0x7db04060b46e67b4480c3cf9a1be364eca21a2972ce03f35b9d69d0015db1549"`;

exports[`wasm > decode & create proof works 4`] = `
[
  "0x9f012b746dcf32e843354583c9702cc02040884c5703f5a4efb16ffa83d00700001404e80300005c5706ff6f7d467b87a9e80300002408d0070000490800004c570c7327a2a48bf2b1490800001404e8030000",
  "0x9f0cb6f36e027abb2091cfb5110ab5087f9960685f06155b3cd9a8c9e5e9a23fd5dc13a5ed205d49a91000000000685f08316cbf8fa0da822a20ac1c55bf1be320a262000000000000505f0e7b9012096b41c4eb3aaf947f6ea42908000080b06947b43b690f37d4acce3df0061e956e4b4249d58b80519935833c2c4eb0e680e627529ec0b70df9d4562816343d3fd0d30abe8b2b0c8d812a25d94a55974a34685f090e2fbf2d792cb324bffa9427fe1f0e20705be100ae5de100",
  "0x9f0d710b30bd2eab0352ddcc26417aa19440824c5f03c716fb8fff3de61a883bb76adb34a2040080107a2888b632f818a19adeb1ccd4ddc7d677ea02956d755f678536a83a25f35e4c5f0dad6eef5c4b1c68eaa71ea17a02d9de0400",
  "0x8000c080a703489351d812e54a745e221a7469907a21479e2cd8a9776ae340fdda898982485e4993f016e2d2f8e5f43be7bb2594860400",
  "0x9f05207f03cfdce586301014700e2c2593d040505f0e7b9012096b41c4eb3aaf947f6ea429080100685f0d9ef3b78afddab7f5c7142131132ad4200700000000000000585f02275f64c354954352b71eea39cfaca210070000004c5f0ec2d17a76153ff51817f12d9cfc3c7f0400",
  "0x800804806d6cd404605d5c2481bf43cb9403a6c8d6da004318e39fe1ff31c9f50042febd80929fccaf143551e3cee678117c06e6b8ebd6e3443214a8cbde73fb82d89c7111",
  "0x5e414cb008e0e61e46722aa60abdd672802527aaef690b1334e4ec1bd567ea892286dc1265510ad57d74dd8628d4c47ad4",
  "0x9f06de3d8a54d27e44a9d5ce189618f22d3008505f0e7b9012096b41c4eb3aaf947f6ea4290804004c5f03b4123b2e186e07fb7bad5dda5f55c004008077d0e6c6873fc637a60aa06503ed4ffbd0bfdd2b5d2f012343a72a303614afae",
  "0x767fefc408aac59dbfe80a72ac8e3ce5b6ff6f7d467b87a9e803000080f217a51bf18a93d44906f8a3dbd8f60acb609b03c9ade7e38532e3f5f18f70e8",
  "0x5f04b49d95320d9021994c850f25b8e3852d0300005000005000000a00000000c8000000c800000a0000000a000000c8000000640000000000500000c800000700e8764817020040010a0000000000000000c0220fca950300000000000000000000c0220fca9503000000000000000000e8030000009001000a00000000000000009001008070000000000000000000000a000000050000000500000001000000010500000001c800000006000000580200005802000002000000280000000000000002000000010000000700c817a8040200400101020000000f000000",
  "0x5ee678799d3eff024253b90e84927cc680cc322cfedfa300d9bec6649d65f16273941d0e2f90a4c0d7173dd7c95bb02597",
  "0x5f0077dfdb8adb10f78f10a5df8742c5458401083c38641effe2a1c267fb16654d73afd072e5bbbb58a3cee00b6f07858d7868",
  "0x8043908017950ddfb68b41a6e0eb68483384a2642afdb241fd0d7fe021e5b9f20b6f275c80c94292198e0c8b47b9aee514c18d22879f4cb9f6bc9e5bb4e38594917f6f829680a3fd676e9772de52c2aa8efb3646ed1d6268894f406f415964305fc6352f0e7b804bd34dd0ef7e09359688e6df7b75dc510bb89d37ef08be2432302c2efef125bb80c31f960bc177852c1ff08ad7f576cd2955a72c9d8df1fe35cc0d98a49d730a6f",
  "0x9f0f78c98723ddc9073523ef3beefda0c4006080466494236add4d65df86a49c798c1e67a9bbf772792e80988ba6923c109d59f44c5e7b9012096b41c4eb3aaf947f6ea429080000",
  "0x9f0d3719f5b0b12c7105c073c50744594840884c5703f5a4efb16ffa83d00700001404e80300005c5706ff6f7d467b87a9e80300002408d0070000490800004c570c7327a2a48bf2b1490800001404e8030000",
  "0x9e0da05ca59913bc38a8630590f2627c168080c208804fb9b3b0d5906eb36f941e821db3f79cb3210ca8aa4c0560dcc27980534c5f0a351b6a99a5b21324516e668bb86a570400505f0e7b9012096b41c4eb3aaf947f6ea42908000080faa229c2dbfea7ecf83e772ea2bc6e7bf8f77ff9b247e7ac953be64c15c498d6",
  "0x9e94c040f5e73d9b7addd6cb603d15d308083c5701275d2a59e7bf2be507000004013c5706ff6f7d467b87a9e80300000401",
  "0x80001480d1c5dfd27a348dfe6d0bbba95e4c43019bd078a4bf616f6a982a6b7eab2c932080c5c3fb9143839ec1e62ace0d5f5a99d1bc410e3475c3220c568c828ac1ec31db",
]
`;

exports[`wasm > decode & create proof works 5`] = `
{
  "0x06de3d8a54d27e44a9d5ce189618f22db4b49d95320d9021994c850f25b8e385": "0x00005000005000000a00000000c8000000c800000a0000000a000000c8000000640000000000500000c800000700e8764817020040010a0000000000000000c0220fca950300000000000000000000c0220fca9503000000000000000000e8030000009001000a00000000000000009001008070000000000000000000000a000000050000000500000001000000010500000001c800000006000000580200005802000002000000280000000000000002000000010000000700c817a8040200400101020000000f000000",
  "0x1cb6f36e027abb2091cfb5110ab5087f06155b3cd9a8c9e5e9a23fd5dc13a5ed": "0x5d49a91000000000",
  "0x1cb6f36e027abb2091cfb5110ab5087f38316cbf8fa0da822a20ac1c55bf1be3": "0xa262000000000000",
  "0x1cb6f36e027abb2091cfb5110ab5087f7a414cb008e0e61e46722aa60abdd672": "0x2527aaef690b1334e4ec1bd567ea892286dc1265510ad57d74dd8628d4c47ad4",
  "0x1cb6f36e027abb2091cfb5110ab5087f7ce678799d3eff024253b90e84927cc6": "0xcc322cfedfa300d9bec6649d65f16273941d0e2f90a4c0d7173dd7c95bb02597",
  "0x1cb6f36e027abb2091cfb5110ab5087fd077dfdb8adb10f78f10a5df8742c545": "0x01083c38641effe2a1c267fb16654d73afd072e5bbbb58a3cee00b6f07858d7868",
  "0x63f78c98723ddc9073523ef3beefda0c4d7fefc408aac59dbfe80a72ac8e3ce5b6ff6f7d467b87a9e8030000": "0xf217a51bf18a93d44906f8a3dbd8f60acb609b03c9ade7e38532e3f5f18f70e8",
  "0x6a0da05ca59913bc38a8630590f2627c1d3719f5b0b12c7105c073c507445948b6ff6f7d467b87a9e8030000": "0x08d007000049080000",
  "0x6a0da05ca59913bc38a8630590f2627cf12b746dcf32e843354583c9702cc020b6ff6f7d467b87a9e8030000": "0x08d007000049080000",
  "0xcd710b30bd2eab0352ddcc26417aa1949e94c040f5e73d9b7addd6cb603d15d3b6ff6f7d467b87a9e8030000": "0x01",
}
`;
